Forcage du mot BipBip à ne pas passer à la ligne sur la page vend

--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -117,7 +117,7 @@
         <section>
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-8">
-                    <h2 class="primary-title-left">Pourquoi vendre mon tél à BipBip&nbsp;?</h2>
+                    <h2 class="primary-title-left">Pourquoi&#8239;vendre&#8239;mon&#8239;tél&#8239;à&#8239;BipBip&nbsp;?</h2>
                     <p class="text-justify">Vendre ton téléphone à BipBip c'est permettre à une petite entreprise du Nord de se
                         développer. Favoriser l'emploi local chez nous mais aussi chez nos partenaires. C'est aider
                         à construire une économie plus durable et surtout gagner de l'argent en faisant
