Modif presse kit en notre actu + ajout lien vers page presse

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,7 +104,7 @@
                                     <li><a href="{{ path("add_message") }}" title="Parrain" class="primary-title-menu">Parrain</a></li>
                                     <li class="pt-3"><h3 class="primary-title-menu-black">Parlons BipBip</h3></li>
                                     <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
-                                    <li><a href="#" title="Presse kit" class="primary-title-menu">Presse kit</a></li>
+                                    <li><a href="{{ path("presse") }}" title="Presse kit" class="primary-title-menu">Notre actu</a></li>
                                 </ul>
                             </div>
                         </div>
