--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -34,21 +34,26 @@
        <div class="col-12 justify-content-between">
            <h1 class="third-title mt-3 mb-3">Notre énergie étudiante</h1>
        </div>
-            <div class="col-6 col-sm-6 col-lg-3 col-xl-3 ">
+            <div class="col-6 col-sm-6 col-lg-3 col-xl-4">
                 <img class="for-4 img-fluid m-4" src="{{asset('images/team-gautier.png')}}" alt="Gautier">
                 <p class="mt-3 text-justify">
                     Toujours de bonne humeur notre étudiant de l’EDHEC a plus d’un tour dans son sac.
                     Il dégaine le contact aussi vite que son ombre.
                 </p>
             </div>
-            <div class="col-6 col-sm-6 col-lg-3 col-xl-3">
+            <div class="col-6 col-sm-6 col-lg-3 col-xl-4">
                 <img class="for-4 img-fluid m-4" src="{{asset('images/team-clothilde.png')}}" alt="Clothilde">
                 <p class="mt-3 text-justify">
                     Notre petite blonde en alternance, pleine de vie et d’envies elle anime nos réseaux.
                     Sa douceur n’a d’égal que son sourire, elle saura te redonner un coup de boost.
                 </p>
             </div>
-            <div class="col-6 col-sm-6 col-lg-3 col-xl-3 ">
+            <div class="col-6 col-sm-6 col-lg-3 col-xl-4">
+                <img class="for-4 img-fluid m-4" src="{{asset('images/team-clement.png')}}" alt="Clement">
+                <p class="mt-3 text-justify">
+                </p>
+            </div>
+            <div class="col-6 col-sm-6 col-lg-3 col-xl-4 ">
                 <img class="for-4 img-fluid m-4" src="{{asset('images/team-wilders.png')}}" alt="Wilders">
                 <p class="mt-3 text-justify">
                     Nos 5 étudiants en développement web de la Wild Code School ont su donner vie à notre superbe site internet.
@@ -56,7 +61,13 @@
                     A travers les différentes personnalités de chacun nous avons su travailler main dans la main.
                 </p>
             </div>
-            <div class="col-6 col-sm-6 col-lg-3 col-xl-3 ">
+            <div class="col-6 col-sm-6 col-lg-3 col-xl-4 ">
+                <img class="for-4 img-fluid m-4" src="{{asset('images/team-ifag.png')}}" alt="IFAG">
+                <p class="mt-3 text-justify">
+                    Nos futurs managers de l’IFAG ont su nous donner un coup de pouce pour rendre notre projet encore plus innovant.
+                </p>
+            </div>
+            <div class="col-6 col-sm-6 col-lg-3 col-xl-4 ">
                 <img class="for-4 img-fluid m-4" src="{{asset('images/team-ifag.png')}}" alt="IFAG">
                 <p class="mt-3 text-justify">
                     Nos futurs managers de l’IFAG ont su nous donner un coup de pouce pour rendre notre projet encore plus innovant.
@@ -66,21 +77,26 @@
             <div class="col-12">
                 <h1 class="third-title mt-3 mb-3">Nos accompagnateurs experts</h1>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 text-center">
+            <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert.png')}}" alt="expert">
                 <p class="mt-3 text-justify">
+                    On se rappellera des brainstormings avec Juliette qui ont donné naissance à la marque BipBip
                 </p>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4  text-center">
+            <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-gd-link.png')}}" alt="gd-link">
                 <p class="mt-3 text-justify">
                     Aussi énergique que directe, elle va droit au but. Le management et la mode n’ont aucun secret pour elle.
                 </p>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4  text-center">
+            <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-corinne.png')}}" alt="Corinne">
                 <p class="mt-3 text-justify">
                     Aussi détendue que bienveillante, elle est toujours dispo pour donner vie à nos projets.
+            </div>
+            <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
+                <img class="for-4 img-fluid m-1" src="{{asset('images/team-angel.png')}}" alt="Angel">
+                <p class="mt-3 text-justify"></p>
             </div>
         </div>
 </main>
