--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -68,9 +68,8 @@
                 </p>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 col-xl-4 ">
-                <img class="for-4 img-fluid m-4" src="{{asset('images/team-ifag.png')}}" alt="IFAG">
+                <a href="{{ path('recrute') }}"><img class="for-4 img-fluid m-4" src="{{asset('images/team-redirection-recrute.png')}}" alt="Onrecrute"></a>
                 <p class="mt-3 text-justify">
-                    Nos futurs managers de l’IFAG ont su nous donner un coup de pouce pour rendre notre projet encore plus innovant.
                 </p>
             </div>
 
