Ajout texte et lien vers recrutement sur la page contact

--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -10,6 +10,10 @@
                         <p class="text-justify">Salut toi ! Alors comme ça tu veux papoter ?</p>
                         <p class="text-justify">Avant de te fatiguer à nous écrire un message, jette un coup d'oeil dans la
                             <a href="{{ path('faq_index') }}" class="font-weight-bold">FAQ</a> !</p>
+                        <p class="text-justify">Si tu veux intégrer le projet BipBip, c'est
+                            <a href="{{ path('recrute') }}">
+                                <span class="font-weight-bold">ICI</span>
+                            </a></p>
                     </div>
                     <div class="col-8">
                         <p>A bientôt,<br>
