--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -42,6 +42,9 @@
                 {{ form_widget(form.phone, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Téléphone',
                     'label': 'Téléphone'}}) }}
             </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2 mt-3">
+                {{ form_widget(form.upload, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Ajouter un document pdf/jpeg/jpg/png'}}) }}
+            </div>
             <div class="offset-sm-2 col-sm-8 offset-sm-2">
                 {{ form_widget(form.message, {'attr': {'class': 'form-control mt-3 mb-3',
                     'placeholder': 'Message (10 caractères minimum)', 'label': 'Message', 'required': true}}) }}
