creation page bons plans avec ajout de texte + changement terme 'acheté' par 'collecté' dans la partie admin

--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -140,7 +140,7 @@
                         </a>
                     {% elseif estimation.isCollected == 1 %}
                         <p class="text-success">
-                            Acheté
+                            Collecté
                         </p>
                         <a target="_blank" href="/../uploads/CI/{{ filename[estimation.user.id] }}" class="secondary-button">
                             Voir vendeur
