changement texte sur page vend

--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="col-12 col-sm-8 text-justify mt-3">
-                    BipBip est le seul à te proposer une appli pour diagnostiquer et connaître la valeur de ton smartphone.
+                    BipBip te propose une super appli pour diagnostiquer et connaître la valeur de ton téléphone.
                     <br>L’application est bien-sûr disponible sur l’App Store et également sur Play Store.
                 </div>
             </div>
