correction faute sur homepage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -48,7 +48,7 @@
         <section>
             <div class="row comment-marche mt-3 pb-3 align-items-center">
                 <div class="col-12">
-                    <h2 class="primary-title">Comment vendre son téléphone ?</h2>
+                    <h2 class="primary-title">Comment vendre ton téléphone ?</h2>
                 </div>
 
                 <div class="col-12 col-lg-6 text-center">
