Remplacemet image achete un bipbip par du texte

--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -9,7 +9,9 @@ La boutique BipBip
 {% block body %}
 
     <div class="row" id="title">
-        <img src="{{ asset('/images/achete_un_bipbip_fond_vert.png') }}" alt="">
+        <h1 class="title-page">
+            Achète un BipBip
+        </h1>
     </div>
 
     <main class="container" id="container">
