correction des erreur d'affichages sur les titres de page

--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -10,7 +10,7 @@ La boutique BipBip
 
     <div class="row" id="title">
         <h1 class="title-page">
-            Achète un BipBip
+            <span>Achète un BipBip</span>
         </h1>
     </div>
 
