--- a/templates/home/asso.html.twig
+++ b/templates/home/asso.html.twig
@@ -4,7 +4,9 @@
 
 {% block body %}
     <main class="container">
-        <h1 class="primary-title">Pourquoi organiser une collecte ?</h1>
+        <h1 class="title-page">
+            <span>Pourquoi organiser une collecte ?</span>
+        </h1>
         <p>Texte en construction</p>
         <p>
             Les avantages : <br>
