--- a/templates/organisms/index.html.twig
+++ b/templates/organisms/index.html.twig
@@ -10,7 +10,9 @@
 {% block body %}
 
     <main class="partnersList">
-        <h1 class="primary-title">Les partenaires</h1>
+        <h1 class="title-page">
+            <span>Les partenaires</span>
+        </h1>
 
         <section>
             {% for organism in organisms %}
