--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -4,7 +4,9 @@
     <main class="container">
         <div class="row">
             <div class="col-lg-8 col-sm-8 mx-auto p-3">
-                <h1 class="title-page">Contacte-nous</h1>
+                <h1 class="title-page">
+                    <span>Contacte-nous</span>
+                </h1>
                 <div class="row align-items-end">
                     <div class="col-12">
                         <p class="text-justify">Salut toi ! Alors comme ça tu veux papoter ?</p>
