--- a/templates/collects/_form.html.twig
+++ b/templates/collects/_form.html.twig
@@ -6,6 +6,9 @@
         <div class="offset-sm-3 col-sm-6 offset-sm-3">
                 {{ form_row(form.dateCollect) }}
         </div>
+        <div class="offset-sm-3 col-sm-6 offset-sm-3">
+                {{ form_row(form.dateEndCollect) }}
+        </div>
         <div class="text-center">
         <button class="fourth-button">{{ button_label|default('Enregistrer') }}</button>
         </div>
