--- a/templates/collects/index.html.twig
+++ b/templates/collects/index.html.twig
@@ -14,28 +14,35 @@
 
         <div class="container">
             <div class="row align-items-center table-head rounded-top">
-                <div class="col-3 text-center">
+                <div class="col-1 text-center">
                     Organisme
                 </div>
-                <div class="col-3 text-center">
+                <div class="col-2 text-center">
                     Ville
                 </div>
                 <div class="col-3 text-center">
-                    Date
+                    Début
                 </div>
                 <div class="col-3 text-center">
+                    Fin
+                </div>
+                <div class="col-3 text-center">
+                    Action
                 </div>
             </div>
             {% for collect in collects %}
                 <div class="row align-items-center border-bottom">
-                    <div class="col-3 text-center">
+                    <div class="col-1 text-center">
                         {{ collect.collector.organismName }}
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="col-2 text-center">
                         {{ collect.collector.organismCity }}
                     </div>
                     <div class="col-3 text-center">
                         {{ collect.dateCollect ? collect.dateCollect|date('d-m-Y H:i') : '' }}
+                    </div>
+                    <div class="col-3 text-center">
+                        {{ collect.dateEndCollect ? collect.dateEndCollect|date('d-m-Y H:i') : '' }}
                     </div>
                     <div class="col-3 delete-btn">
                         {{ include('collects/_delete_form.html.twig') }}
