--- a/templates/collects/_form.html.twig
+++ b/templates/collects/_form.html.twig
@@ -8,6 +8,11 @@
         </div>
         <div class="offset-sm-3 col-sm-6 offset-sm-3">
                 {{ form_row(form.dateEndCollect) }}
+                {% if error is defined  %}
+                <p class="text-danger">
+                        {{ error }}
+                </p>
+                {% endif %}
         </div>
         <div class="text-center">
         <button class="fourth-button">{{ button_label|default('Enregistrer') }}</button>
