--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -44,7 +44,7 @@
             <div class="col-6 col-sm-6 col-lg-4 col-xl-4">
                 <img class="for-4 img-fluid m-4" src="{{asset('images/team-clothilde.png')}}" alt="Clothilde">
                 <p class="mt-3 text-justify">
-                    Notre petite blonde en alternance, pleine de vie et d’envies elle anime nos réseaux.
+                    Notre petite blonde en alternance, pleine de vie et d’envies anime nos réseaux.
                     Sa douceur n’a d’égal que son sourire, elle saura te redonner un coup de boost.
                 </p>
             </div>
