changement affichage sur le choix de l'envoi sur telephone

--- a/templates/user/envoi_chronopost.html.twig
+++ b/templates/user/envoi_chronopost.html.twig
@@ -4,13 +4,13 @@
 
     {% if user %}
         <div class="container col-10 d-flex flex-wrap justify-content-between mt-5">
-            <div class="card col-5 mt-2 mb-2 border-dark p-2">
+            <div class="card col-12 col-sm-5 mt-2 mb-2 border-dark p-2">
                 <img src="{{ asset('/images/etiq_chrono.jpeg') }}" class="card-img-top" alt="Générer une étiquette">
                 <div class="card-body">
                     <h5 class="card-title text-center">
                         GENERER UNE ETIQUETTE
                     </h5>
-                    <p class="card-text">
+                    <p class="card-text text-center">
                         Tu imprimes ton étiquette Chronopost et tu la colles sur ton colis.
                         Tu n’auras plus qu’à présenter ton colis au bureau de poste.
                     </p>
@@ -22,13 +22,13 @@
                     </p>
                 </div>
             </div>
-            <div class="card col-5 mt-2 mb-2 border-dark p-2">
-                <img src="{{ asset('/images/tel_chrono.jpeg') }}" class="card-img-top" alt="Recevoir un code">
+            <div class="card col-12 col-sm-5 mt-2 mb-2 border-dark p-2">
+                <img src="{{ asset('/images/AdobeStock_47479780.jpeg') }}" class="card-img-top" alt="Recevoir un code">
                 <div class="card-body">
                     <h5 class="card-title text-center">
                         RECEVOIR UN CODE
                     </h5>
-                    <p class="card-text">
+                    <p class="card-text text-center">
                         Tu reçois un code. Présente-le au bureau de poste le plus proche de chez toi
                         et ils imprimeront l’étiquette pour toi.
                     </p>
