--- a/templates/bdc/takePhoto.html.twig
+++ b/templates/bdc/takePhoto.html.twig
@@ -19,7 +19,7 @@
                 <h1 class="primary-title">Etape 4 : carte d'identité</h1>
                 <p>Prendre en photo <span class="font-weight-bold">le recto de la carte d'identité</span> du client</p>
                 <form action="{{ path('takePhoto', {'id': estimation.id}) }}" method="post" enctype="multipart/form-data">
-                    <input type="file" name="upload" accept="image/*" capture>
+                    <input type="file" name="upload" accept="image/*, application/pdf" capture>
                     <input type="submit" name="submit" class="btn btn-info" value="Envoyer la photo">
                 </form>
             </div>
