--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -43,7 +43,7 @@
                     <div>
                         <a href="{{ path ('estimations_uncollected_index') }}">A collecter</a>
                         <a href="{{ path('estimations_collected_index') }}">Collectées</a>
-                        <a href="{{ path('estimations_notcollected_index') }}">Non Collectées</a>
+                        <a href="{{ path('estimations_notcollected_index') }}">Absent</a>
                         <a href="{{ path('estimations_unfinished_index') }}">Inachevées</a>
                         <a href="{{ path ('estimations_index') }}">Toutes</a>
                     </div>
