--- a/assets/scss/histoire.scss
+++ b/assets/scss/histoire.scss
@@ -64,8 +64,31 @@
     }
 
   }
-
 }
+
+/* CAROUSEL */
+/*
+.carousel {
+  height:400px;
+
+  .img-carousel {
+    height: 60%;
+    max-height: 400px;
+    width: 50%;
+    border: 3px solid #fff;
+    -moz-box-shadow: 8px 8px 12px #aaa;
+    -webkit-box-shadow: 8px 8px 12px #aaa;
+    box-shadow: 8px 8px 12px #555;
+  }
+
+  .carousel-indicators li {
+    background-color: $secondary-color;
+  }
+  .carousel-indicators .active {
+    background-color: $primary-color;
+  }
+}
+*/
 // notre team
 .for-4 {
   width: 70%;
