--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -16,6 +16,9 @@
                 <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
             </div>
         </div>
+
+        {{ include('home/constat.html.twig') }}
+
         <div class="row mb-5 justify-content-center">
             <div class="col-6 col-sm-4 col-md-4 mt-md-5 text-center">
                 <img class="img-fluid p-4 p-lg-1 justify-content-center" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
@@ -33,9 +36,11 @@
                 <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip Mobile pourront être avantageux tout en gardant leur qualité absolue !<br></p>
                 <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et mettre la machine en marche !</p>
             </div>
-
-                    {{ include('home/constat.html.twig') }}
+        </div>
+            <div>
+                {{ include('infos/carousselPartenaires.html.twig') }}
             </div>
+
     </div>
     <div id="solution">
         <h1 class="title-page"><span>Notre solution</span></h1>
