--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -106,7 +106,7 @@
                                     <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
                                     <li><a href="{{ path("presse") }}" title="Presse kit" class="primary-title-menu">Notre actu</a></li>
                                 </ul>
-                                
+
                             </div>
                     </nav>
 
@@ -176,24 +176,24 @@
 
         {% block footer %}
         <footer class="w-100">
-            <h2 class="primary-title">T'en veux plus ?</h2>
-            <div class="row social-networks justify-content-center mt-2 mb-4">
-                <div class="col-3 col-1-md text-center">
+            <div class="d-flex flex-column">
+                <div>
+                    <h2 class="primary-title">T'en veux plus ?</h2>
+                </div>
+                <div class="social-networks text-center m-3">
                     <a href="https://www.facebook.com/MobileBipbip/" target="_blank" title="Page Facebook">
                         <img src="{{ asset('images/logo-fb.png') }}" alt="Page Facebook" />
                     </a>
-                </div>
-                <div class="col-3 col-1-md text-center">
+
                     <a href="#" target="_blank" title="Instagram">
                         <img src="{{ asset('images/logo-insta.png') }}" alt="Instagram" />
                     </a>
-                </div>
-                <div class="col-3 col-1-md text-center">
                     <a href="#" target="_blank" title="LinkedIn">
                         <img src="{{ asset('images/logo-linkedin.png') }}" alt="LinkedIn" />
                     </a>
                 </div>
             </div>
+
             <div class="row links-footer justify-content-center pt-3 p-4">
 
                 <div class="col-12 text-center pb-2">
