--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -25,7 +25,7 @@
                 </p>
             </div>
             <div class="col-6 col-sm-5 col-md-4 col-lg-4 text-justify">
-                <img class="img-fluid" src="{{asset('images/team-paul.png')}}" alt="Paul">
+                <img class="img-fluid" src="{{asset('images/team-Paul.png')}}" alt="Paul">
                 <p class=" mt-3">
                     Son calme légendaire cache une puissance technique, qui fait trembler les plus grands de ce monde.
                 </p>
