--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -200,7 +200,7 @@
         </div>
     </div>
     <p class="text-right">
-        <a href="{{ path('user_edit', {'id': user.id}) }}" class="text-right">> modifier</a>
+        <a href="{{ path('user_edit', {'id': user.id}) }}" class="secondary-button text-center"> modifier</a>
     </p>
 
 </main>
