fix probleme de backgroud-image

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -24,8 +24,7 @@ body{
     color : black;
     font-size : 1rem;
     background-image: url("../images/fond.png");
-    background-size: contain;
-    background-repeat: repeat;
+    background-attachment: fixed;
 }
 
 @mixin bg($color) {
