--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,9 +34,9 @@
                      class="img-fluid">
             </div>
             <div class="d-none d-md-block col-md-9 p-3 text-center">
-                <img src="{{ asset('images/bipbiprachete-long.png') }}"
-                     alt="BipBip rachète ton tél et en fait le premier mobile recyclé et connecté aux bons plans de ta région"
-                     class="img-fluid">
+                <h1><span class="font-weight-bold">BipBip</span> rachète ton tél et en fait</h1>
+                <h2 class="text-info font-weight-bold">LE 1er MOBILE RECICLÉ ET CONNECTÉ</h2>
+                <H2 class="text-success font-weight-bold">AUX BONS PLANS DE TA RÉGION</H2>
             </div>
             <div class="col-5 col-md-3 p-3">
                 <img src="{{ asset('images/photo-home.png') }}" alt="BipBip rachète ton tél" class="img-fluid">
