--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -8,6 +8,11 @@
                 <h1 class="third-title m-4">Liste des bons de cession stockés</h1>
             </div>
         </div>
+        <div>
+            <p class="text-center text-danger">
+                Pour faire une recherche, faite ctrl/F5.
+            </p>
+        </div>
         <div class="row bg-info align-items-center">
             <div class="col-3 text-center font-weight-bold p-3">
                 Date de la collecte
