--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}BipBip Mobile{% endblock %}</title>
         <link href="https://fonts.googleapis.com/css?family=Century+Gothic" rel="stylesheet" />
-        <!-- <script src="https://kit.fontawesome.com/2710711f76.js" crossorigin="anonymous"></script> -->
+        <script src="https://kit.fontawesome.com/2710711f76.js" crossorigin="anonymous"></script>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
