--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -24,6 +24,24 @@
                 Consulter le fichier
             </div>
         </div>
+
+        {% for estimation in estimations %}
+            <div class="row bg-light align-items-center">
+                <div class="col-3 text-center p-2">
+                    {#-- La date correspond a la clé 0 du tableau estimation, l'id as la clé 1 et le filename a la clé 2 --#}
+                    {{ estimation[0] }}
+                </div>
+                <div class="col-5 text-center">
+                    <a href="{{ path('estimations_show', {id: estimation[1]}) }}" title="">Estimation n°{{estimation[1]}}</a>
+                </div>
+                <div class="col-4 mx-auto text-left">
+                    <a target="_blank" href="/../uploads/BDC/{{ estimation[2] }}">Consulter  {{ estimation[2] }}</a>
+                </div>
+            </div>
+        {% endfor %}
+
+
+        {#
         {%  set number = 0 %}
         {% for file in files %}
         <div class="row bg-light align-items-center">
@@ -39,6 +57,14 @@
         </div>
             {% set number = number +1 %}
         {% endfor %}
+        #}
+
+
+
+
+
+
+
     </main>
 {% endblock %}
 
