--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
 <main class="home">
-    <div id="notreHistoire">
+    <div id="notreHistoire" class="mb-5">
         <h1 class="title-page"><span>Notre histoire</span></h1>
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 text-center">
@@ -37,13 +37,13 @@
                 <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et mettre la machine en marche !</p>
             </div>
         </div>
-            <div>
+            <div class="mb-5">
                 {{ include('infos/carousselPartenaires.html.twig') }}
             </div>
 
     </div>
-    <div id="solution">
-        <h1 class="title-page"><span>Notre solution</span></h1>
+    <div id="solution" class="mt-5">
+        <h1 class="title-page mt-5"><span>Notre solution</span></h1>
 
         <div class="row justify-content-center m-4">
             <p>BipBip est la solution innovante et environnementale pour la région... on te fait un dessin ?</p>
