--- a/templates/infos/carousselPartenaires.html.twig
+++ b/templates/infos/carousselPartenaires.html.twig
@@ -1,69 +1,29 @@
-{#
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-{% set i=0 %}
-{% for organism in organisms %}
-    {% set i=i+1 %}
-
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+<div id="carouselExampleIndicators" class="carousel slide w-75 mx-auto" data-ride="carousel">
+    <ol class="carousel-indicators ">
+        {% set i = 0 %}
+        {% for organism in organisms %}
+            <li data-target="#carouselExampleIndicators"
+                data-slide-to="{{ i }}"
+                class="{% if i == 0 %}active{% endif %} bg-danger">
+            </li>
+            {% set i = i + 1 %}
+        {% endfor %}
     </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-
-            <img class="d-block w-100" src="/uploads/Logos/Logos/{{ organism.Logo }}" alt="First slide">
-
-        </div>
+    <div class="carousel-inner text-center">
+        {% set i = 0 %}
+        {% for organism in organisms %}
+            <div class="carousel-item {% if i == 0 %}active{% endif %}">
+                <img src="uploads/Logos/Logos/{{ organism.logo }}" class="d-block w-50" alt="...">
+            </div>
+            {% set i = i + 1 %}
+        {% endfor %}
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+        <span class="sr-only">Précédent</span>
     </a>
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
+        <span class="sr-only">Suivant</span>
     </a>
 </div>
-{% endfor %}
-#}
-
-
-
-
-{#<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    {% set i=0 %}
-
-        <ol class="carousel-indicators">
-            {% for organism in organisms %}
-            {% set i=i+1 %}
-            <li data-target="#carouselExampleIndicators" data-slide-to="{{ i }}" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="{{ i }}"></li>
-            {% endfor %}
-        </ol>
-
-    <div class="carousel-inner">
-        {% for organism in organisms %}
-        <div class="carousel-item active">
-                <a class="linkA" target="_blank" href="{{ organism.organismLink }}"><img title="{{ organism.organismName }}" src="/uploads/Logos/Logos/{{ organism.Logo }}"
-                         alt="{{ organism.organismName }}" class="d-block w-100">
-                </a>
-        </div>
-        <div class="carousel-item active">
-        <a class="linkA" target="_blank" href="{{ organism.organismLink }}"><img title="{{ organism.organismName }}" src="/uploads/Logos/Logos/{{ organism.Logo }}"
-                                                                                 alt="{{ organism.organismName }}" class="d-block w-100">
-        </a>
-        </div>
-                <a class="carousel-control-prev bg-danger" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-
-                <a class="carousel-control-next bg-warning" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            {% endfor %}
-
-    </div>
-</div>
-
-#}
